@@ -6,7 +6,8 @@ other-alphabetic-property-datum-inc.scm \
 other-uppercase-property-datum-inc.scm \
 other-lowercase-property-datum-inc.scm \
 whitespace-property-datum-inc.scm \
-special-uppercase-datum-inc.scm
+special-uppercase-datum-inc.scm \
+special-lowercase-datum-inc.scm
 
 data/UnicodeData.txt :
 	(cd data && wget "http://www.unicode.org/Public/UNIDATA/UnicodeData.txt")
@@ -18,6 +19,9 @@ data/SpecialCasing.txt:
 	(cd data && wget "http://www.unicode.org/Public/UNIDATA/SpecialCasing.txt")
 
 special-uppercase-datum-inc.scm: make-special-uppercase-datum.scm data/SpecialCasing.txt
+	mosh -b $< > $@
+
+special-lowercase-datum-inc.scm: make-special-lowercase-datum.scm data/SpecialCasing.txt
 	mosh -b $< > $@
 
 titlecase-datum-inc.scm: make-title-case-datum.scm data/UnicodeData.txt
